# kropki_gen

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  api.yaml  backend.Dockerfile  board.py  celerybeat.Dockerfile  celeryworker.Dockerfile  docker-compose.yml  fly.toml  generator.py  graph.py  ken.py  main.py  model.py  pyproject.toml  server.py  worker.py
